--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,16 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-material": "^1.1.1"
+    "angular-material": "^1.1.1",
+    "angular-dragula": "^1.2.8",
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "agileBoardApp"
+  "moduleName": "agileBoardApp",
+  "resolutions": {
+    "angular": "^1.4.8"
+  }
 }
