--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,16 @@
   "name": "agile-board",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
+    "angular": "^1.6.1",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-material": "^1.1.1",
     "angular-dragula": "^1.2.8",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
