refact and add project card structure

--- a/app/data/projects_all.json
+++ b/app/data/projects_all.json
@@ -3,6 +3,28 @@
       "id": "1",
       "title":"Survey",
       "description":"Product location inside the store",
+      "tags":["survey","product", "store"]
+  },
+  {
+      "id": "2",
+      "title": "Order",
+      "description": "Order take",
+      "tags": ["order","product", "price"]
+  },
+  {
+      "id": "5",
+      "title": "Order v.2",
+      "description": "Order take",
+      "tags": ["order","product", "price"]
+  }
+]
+
+
+[
+  {
+      "id": "1",
+      "title":"Survey",
+      "description":"Product location inside the store",
       "tags":["survey","product", "store"],
       "backlog":[
         {
